--- a/trades/templates/trades/base.html
+++ b/trades/templates/trades/base.html
@@ -99,6 +99,11 @@
               <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
           {% endif %}
+              <!-- … existing nav items … -->
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'account' %}">My Account</a>
+    </li>
+
         </ul>
       </div>
     </div>
