--- a/trades/templates/trades/account.html
+++ b/trades/templates/trades/account.html
@@ -1,6 +1,6 @@
 {% extends 'trades/base.html' %}
 {% block content %}
-  <h2>My Account</h2>
+ {# <h2>My Account</h2> #} 
 
   <!-- Change Password -->
   <div class="mb-4">
