--- a/trades/templates/trades/add_trade.html
+++ b/trades/templates/trades/add_trade.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h2>Add New Trade</h2>
+{# <h2>Add New Trade</h2> #}
 
 <form method="post" novalidate>
   {% csrf_token %}
