--- a/trades/templates/trades/trade_list.html
+++ b/trades/templates/trades/trade_list.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="mb-4">My Trades</h2>
+{# <h2 class="mb-4">My Trades</h2> #}
 
  <div class="mb-3 d-flex gap-2">
     <a href="{% url 'export_trades' %}" class="btn btn-sm btn-outline-success">
