Fix: Redesign date slider -> Move Start/End labels below slider for cleaner, modern look

--- a/trades/templates/trades/base.html
+++ b/trades/templates/trades/base.html
@@ -130,6 +130,47 @@
       outline: 3px solid #0d6efd !important;
       outline-offset: 2px;
     }
+
+ .slider-block {
+  padding-top: 1.9rem;
+  padding-bottom: 0.2rem;
+  margin-left: 1.5rem;
+  padding-right: 3rem;
+  width: 100%;
+}
+
+#date-slider {
+  width: 100%;
+  margin: 0;
+}
+
+.noUi-horizontal .noUi-handle {
+  top: 0;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+}
+
+.noUi-tooltip {
+  top: -40px !important;
+  z-index: 2;
+  background: #fff;
+  color: #333;
+  border: 1px solid #b6c2e4;
+  font-size: 0.96rem;
+}
+
+.slider-block .d-flex {
+  margin-top: 0.3rem;
+  font-size: 1.02rem;
+}
+
+@media (max-width: 767px) {
+  .slider-block .d-flex { font-size: 0.93rem; }
+  .noUi-tooltip { font-size: 0.87rem; top: -45px !important; }
+}
+
+
+
+
   </style>
 </head>
 
