--- a/trades/templates/trades/base.html
+++ b/trades/templates/trades/base.html
@@ -144,6 +144,8 @@
   </script>
 
   <!-- Bootstrap & dependencies -->
+   
+<script src="https://cdn.jsdelivr.net/npm/tsparticles@3.3.0/tsparticles.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
